--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Equipamientos Especiales</title>
 <style>
 :root { --brand:#173754; --muted:#6b7280; }
-body { margin:0; font-family:system-ui; background:white; color:#0f172a; }
+body { margin:0; font-family:system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:white; color:#0f172a; }
 .wrap { max-width:720px; margin:0 auto; padding:32px 20px 48px; text-align:center; }
 .logo { width:150px; margin:12px auto 10px; display:block; }
 h1 { font-size:32px; margin:8px 0 12px; color:var(--brand); text-transform:uppercase; }
@@ -53,9 +53,9 @@ aluminio, alucobond, vidrio, madera, acero al carbono, entre otros.
 </p>
 
 <div class="btns">
-  <a class="btn" href="https://wa.link/uyovev" target="_blank">📲 WhatsApp</a>
-  <a class="btn" href="https://instagram.com/equipamientos.especiales" target="_blank">📷 Instagram</a>
-  <a class="btn" href="https://maps.app.goo.gl/yfx9Vy2JtgNu6587A?g_st=aw" target="_blank">📍 Google Maps</a>
+  <a class="btn" href="https://wa.link/uyovev" target="_blank" rel="noopener">📲 WhatsApp</a>
+  <a class="btn" href="https://instagram.com/equipamientos.especiales" target="_blank" rel="noopener">📷 Instagram</a>
+  <a class="btn" href="https://maps.app.goo.gl/yfx9Vy2JtgNu6587A?g_st=aw" target="_blank" rel="noopener">📍 Google Maps</a>
 </div>
 
 <div class="btn-call">
@@ -71,7 +71,7 @@ Comunicate, mirá nuestros trabajos y visitá nuestro taller. Presupuestos sin c
 <h2>Algunos de nuestros trabajos</h2>
 
 <div class="gallery">
-  <img id="galeria-img" src="foto1.jpg">
+  <img id="galeria-img" src="foto1.jpg" alt="Trabajo realizado por Equipamientos Especiales">
   <button class="nav prev" onclick="cambiar(-1)">‹</button>
   <button class="nav next" onclick="cambiar(1)">›</button>
 </div>
@@ -82,7 +82,7 @@ Comunicate, mirá nuestros trabajos y visitá nuestro taller. Presupuestos sin c
 <div class="address">
 📍  Florentino Ameghino 3452, B1674AGR
 🏙️ Sáenz Peña, Provincia de Buenos Aires
-📬 equipamientos@especiales.com
+📬 equipamientos@especiales.com.ar
 📲 11 6878 3881
 ☎️ 2085 2821
 </div>
