--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Equipamientos Especiales</title>
 <style>
 :root { --brand:#173754; --muted:#6b7280; }
-body { margin:0; font-family:system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:white; color:#0f172a; }
+body { margin:0; font-family:system-ui; background:white; color:#0f172a; }
 .wrap { max-width:720px; margin:0 auto; padding:32px 20px 48px; text-align:center; }
 .logo { width:150px; margin:12px auto 10px; display:block; }
 h1 { font-size:32px; margin:8px 0 12px; color:var(--brand); text-transform:uppercase; }
@@ -71,7 +71,7 @@ Comunicate, mirá nuestros trabajos y visitá nuestro taller. Presupuestos sin c
 <h2>Algunos de nuestros trabajos</h2>
 
 <div class="gallery">
-  <img id="galeria-img" src="foto1.jpg" alt="Trabajo realizado por Equipamientos Especiales">
+  <img id="galeria-img" src="foto1.jpg">
   <button class="nav prev" onclick="cambiar(-1)">‹</button>
   <button class="nav next" onclick="cambiar(1)">›</button>
 </div>
